# rust-hive

./: .gitignore  Cargo.toml  README.md  pyproject.toml  sample_script.py
.github/workflows/: release.yml  test-release-file.yml
notebooks/: Load data.ipynb  Scraper prototype.ipynb  Untitled.ipynb
src/: data_ingestion.rs  experiment.rs  main.rs  main_tokio.rs  parsers.rs
src/databases/: duckdb_functions.rs  mod.rs
