[package]
name = "rust-hive"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
duckdb = {version = "1.1.1", features = ["bundled"]}
reqwest = {version = "0.12.9", features = ["blocking"]}
futures-io = { version = "0.2.0-beta" }
thiserror = "2.0.9"

[[bin]]
name = "data_ingestion"
path = "src/data_ingestion.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "experiment"
path = "src/experiment.rs"


[profile.release]
opt-level = "z"
strip = true
lto = true
