[project]
name = "terra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "notebook==6",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "result>=0.17.0",
    "ruff>=0.8.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
